--- a/assets/scss/_page-changer.scss
+++ b/assets/scss/_page-changer.scss
@@ -20,6 +20,6 @@
   }
 
   .c-head__wrap {
-    padding: 0 1.25rem;
+    padding: 0;
   }
 }
